--- a/style/main.scss
+++ b/style/main.scss
@@ -18,15 +18,17 @@ body {
 }
 
 .header {
-  background-image: url("../image/header.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  padding: 85px 0 0 0;
+  img {
+    width: 100%;
+  }
+}
+
+.container {
+  max-width: 980px;
+  margin: 0 auto;
 }
 
 .tabContainer {
-  width: 980px;
-  margin: 0 auto;
   .tabContainer__tabButtons {
     display: flex;
     justify-content: space-between;
@@ -216,6 +218,11 @@ body {
   }
 }
 
-
 [hidden] { display: none; }
+
+@media screen and (min-width: 3570px){
+  .bodySection {
+    background-size: cover;
+  }
+}
 
